update openapi e verfica token
